Fix create container UI on mobile

--- a/assets/css/apps/note/CreateContainer.css
+++ b/assets/css/apps/note/CreateContainer.css
@@ -27,7 +27,7 @@
     border: none;
     font-size: inherit;
     outline: none;
-    width: 90%;
+    width: 100%;
     background-color: rgb(241, 203, 157);
 }
 
