--- a/assets/css/basics/layout.css
+++ b/assets/css/basics/layout.css
@@ -90,7 +90,7 @@
     place-self: center start;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 700px) {
 
 
     .create-container {
